--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "keyword-extractor": "0.0.16"
   },
   "devDependencies": {
     "hexo-generator-json-content": "^3.0.1"
